@@ -1,3 +1,5 @@
+- Refactor: Remove deprecated PaymentPenaltyEventTarget entity
+
 8.4.2 (05-07-2022)
 - Refactor: Implement import and export operations for AcademicDebtGenerationRuleRestriction class and subclasses, in order to be able to migrate from other systems
 - Refactor: Set constructor and checkRules of AcademicDebtGenerationRuleRestriction and subclasses as public in order to migrate
